# deepseek-coder

./: .gitignore  DeepSeek Coder.spec  README.md  README.ru.md  pyproject.toml
.github/workflows/: build.yml
src/deepseek_coder/: __init__.py  __main__.py
src/deepseek_coder/infrastructure/: deepseek_client.py  keyring_store.py  mcp_manager.py  sqlite_repo.py
src/deepseek_coder/scripts/: check_keyring.py  chek_deepseek.py
src/deepseek_coder/services/: agents.py  deepseek.py  history.py  project.py  settings.py
src/deepseek_coder/ui/: chat_view.py  file_tree_panel.py  file_viewer.py  main_window.py  markdown_renderer.py  message_input.py  sessions_panel.py  setting_dialog.py
